[gd_scene load_steps=16 format=2]

[ext_resource path="res://Interface/Game/PlayerInfoUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/Shop/Shop.gd" type="Script" id=2]
[ext_resource path="res://Levels/Template/Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Interface/Shop/UpgradePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Game/Consumables.tscn" type="PackedScene" id=5]
[ext_resource path="res://Mobs/Shop Dummy/Dummy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Interface/Game/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Interface/Shop/ShopRangePreview.gd" type="Script" id=8]
[ext_resource path="res://Audio/Music/till_you_drop.ogg" type="AudioStream" id=9]
[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=10]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -104, -144, 0, 0, 0, 0, -104, 32, 0, 0, 0, 0, -104, -144 )
}

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -40, -144, 0, 0, 0, 0, -40, 32, 0, 0, 0, 0, -40, -144 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 40, -144, 0, 0, 0, 0, 40, 32, 0, 0, 0, 0, 40, -144 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 104, -144, 0, 0, 0, 0, 104, 32, 0, 0, 0, 0, 104, -144 )
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.498039 )

[node name="Shop" type="Node2D"]
script = ExtResource( 2 )
bg_music = ExtResource( 9 )
dummy = ExtResource( 6 )
path_1 = SubResource( 2 )
path_2 = SubResource( 1 )
path_3 = SubResource( 3 )
path_4 = SubResource( 4 )

[node name="TopTileMap" type="TileMap" parent="."]
z_index = 10
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -589831, 5, 0, -589829, 5, 0, -589827, 5, 0, -589826, 5, 0, -655359, 5, 0, -655358, 5, 0, -655356, 5, 0, -655354, 5, 0, -524301, 6, 0, -524300, 536870921, 0, -524299, 536870921, 0, -524298, 536870921, 0, -524297, 536870921, 0, -524296, 536870921, 0, -524295, 536870921, 0, -524294, 536870921, 0, -524293, 536870921, 0, -524292, 536870921, 0, -524291, 536870921, 0, -524290, 536870918, 0, -524289, 5, 0, -589824, 5, 0, -589823, 6, 0, -589822, 536870921, 0, -589821, 536870921, 0, -589820, 9, 0, -589819, 536870921, 0, -589818, 536870921, 0, -589817, 536870921, 0, -589816, 536870921, 0, -589815, 536870921, 0, -589814, 536870921, 0, -589813, 536870921, 0, -589812, 536870918, 0, -458765, 1610612740, 0, -458754, 4, 0, -458753, 5, 0, -524288, 5, 0, -524287, 536870916, 0, -524276, 1073741828, 0, -393229, 1610612740, 0, -393218, 8, 0, -393217, 536870921, 0, -458752, 536870921, 0, -458751, 536870920, 0, -458740, 1073741828, 0, -327693, 1610612740, 0, -393204, 1073741828, 0, -262157, 1610612740, 0, -262156, 0, 0, -262155, 1, 0, -262154, 1, 0, -262153, 536870912, 0, -327672, 0, 0, -327671, 1, 0, -327670, 1, 0, -327669, 536870912, 0, -327668, 1073741828, 0, -196621, 1610612740, 0, -196620, 1073741828, 0, -196619, 5, 0, -196618, 5, 0, -196617, 536870916, 0, -262136, 4, 0, -262135, 5, 0, -262134, 5, 0, -262133, 536870916, 0, -262132, 1073741828, 0, -131085, 1610612740, 0, -131084, 1073741828, 0, -131083, 5, 0, -131082, 5, 0, -131081, 536870916, 0, -196600, 4, 0, -196599, 5, 0, -196598, 5, 0, -196597, 536870916, 0, -196596, 1073741828, 0, -65549, 1610612740, 0, -65548, 1073741828, 0, -65547, 5, 0, -65546, 5, 0, -65545, 536870916, 0, -131064, 4, 0, -131063, 5, 0, -131062, 5, 0, -131061, 536870916, 0, -131060, 1073741828, 0, -13, 1610612740, 0, -12, 8, 0, -11, 9, 0, -10, 9, 0, -9, 536870920, 0, -65528, 8, 0, -65527, 536870921, 0, -65526, 536870921, 0, -65525, 536870920, 0, -65524, 1073741828, 0, 65523, 1610612740, 0, 12, 1073741828, 0, 131059, 1610612740, 0, 131063, 0, 0, 131064, 536870913, 0, 131065, 536870913, 0, 131066, 536870913, 0, 131067, 536870913, 0, 131068, 536870913, 0, 131069, 536870913, 0, 131070, 536870913, 0, 131071, 536870913, 0, 65536, 536870913, 0, 65537, 536870913, 0, 65538, 536870913, 0, 65539, 536870913, 0, 65540, 536870913, 0, 65541, 536870913, 0, 65542, 536870913, 0, 65543, 536870913, 0, 65544, 536870912, 0, 65548, 1073741828, 0, 196595, 1610612740, 0, 196599, 4, 0, 196600, 5, 0, 196601, 5, 0, 196602, 5, 0, 196603, 5, 0, 196604, 5, 0, 196605, 5, 0, 196606, 5, 0, 196607, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 536870916, 0, 131084, 1073741828, 0, 262131, 1610612740, 0, 262135, 4, 0, 262136, 5, 0, 262137, 5, 0, 262138, 5, 0, 262139, 5, 0, 262140, 5, 0, 262141, 5, 0, 262142, 5, 0, 262143, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 536870916, 0, 196620, 1073741828, 0, 327667, 1610612740, 0, 327671, 4, 0, 327672, 5, 0, 327673, 5, 0, 327674, 5, 0, 327675, 5, 0, 327676, 5, 0, 327677, 5, 0, 327678, 5, 0, 327679, 5, 0, 262144, 5, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 536870916, 0, 262156, 1073741828, 0, 393203, 1610612740, 0, 393207, 8, 0, 393208, 9, 0, 393209, 9, 0, 393210, 9, 0, 393211, 9, 0, 393212, 9, 0, 393213, 9, 0, 393214, 9, 0, 393215, 9, 0, 327680, 9, 0, 327681, 9, 0, 327682, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 9, 0, 327687, 9, 0, 327688, 536870920, 0, 327692, 1073741828, 0, 458739, 1610612740, 0, 393228, 1073741828, 0, 524275, 1610612740, 0, 458764, 1073741828, 0, 589811, 536870914, 0, 589812, 536870913, 0, 589813, 536870913, 0, 589814, 536870913, 0, 589815, 536870913, 0, 589816, 536870913, 0, 589817, 536870913, 0, 589818, 536870913, 0, 589819, 536870913, 0, 589820, 536870913, 0, 589821, 536870913, 0, 589822, 536870913, 0, 589823, 536870913, 0, 524288, 536870913, 0, 524289, 536870913, 0, 524290, 536870913, 0, 524291, 536870913, 0, 524292, 536870913, 0, 524293, 536870913, 0, 524294, 536870913, 0, 524295, 536870913, 0, 524296, 536870913, 0, 524297, 536870913, 0, 524298, 536870913, 0, 524299, 536870913, 0, 524300, 2, 0 )

[node name="BottomTileMap" type="TileMap" parent="."]
z_index = -10
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -524301, 16, 0, -524300, 536870924, 0, -524299, 536870924, 0, -524298, 536870924, 0, -524297, 536870924, 0, -524296, 536870924, 0, -524295, 11, 0, -524294, 536870924, 0, -524293, 12, 0, -524292, 536870924, 0, -524291, 11, 0, -524290, 12, 0, -589823, 12, 0, -589822, 11, 0, -589821, 536870924, 0, -589820, 12, 0, -589819, 536870924, 0, -589818, 11, 0, -589817, 536870924, 0, -589816, 536870924, 0, -589815, 536870924, 0, -589814, 536870924, 0, -589813, 536870924, 0, -589812, 536870928, 0, -458765, 15, 0, -458764, 15, 0, -458763, 15, 0, -458762, 15, 0, -458761, 15, 0, -458760, 15, 0, -458759, 11, 0, -458758, 15, 0, -458757, 15, 0, -458756, 15, 0, -458755, 11, 0, -458754, 15, 0, -524287, 15, 0, -524286, 11, 0, -524285, 15, 0, -524284, 15, 0, -524283, 15, 0, -524282, 11, 0, -524281, 15, 0, -524280, 15, 0, -524279, 15, 0, -524278, 15, 0, -524277, 15, 0, -524276, 15, 0, -393229, 15, 0, -393228, 15, 0, -393227, 15, 0, -393226, 15, 0, -393225, 15, 0, -393224, 15, 0, -393223, 11, 0, -393222, 15, 0, -393221, 15, 0, -393220, 15, 0, -393219, 11, 0, -393218, 536870922, 0, -393217, 536870924, 0, -458752, 536870924, 0, -458751, 10, 0, -458750, 11, 0, -458749, 15, 0, -458748, 15, 0, -458747, 15, 0, -458746, 11, 0, -458745, 15, 0, -458744, 15, 0, -458743, 15, 0, -458742, 15, 0, -458741, 15, 0, -458740, 15, 0, -327693, 15, 0, -327692, 15, 0, -327691, 15, 0, -327690, 15, 0, -327689, 15, 0, -327688, 15, 0, -327687, 11, 0, -327686, 15, 0, -327685, 15, 0, -327684, 15, 0, -327683, 11, 0, -327682, 15, 0, -327681, 15, 0, -393216, 15, 0, -393215, 15, 0, -393214, 11, 0, -393213, 15, 0, -393212, 15, 0, -393211, 15, 0, -393210, 11, 0, -393209, 15, 0, -393208, 15, 0, -393207, 15, 0, -393206, 15, 0, -393205, 15, 0, -393204, 15, 0, -262157, 15, 0, -262156, 15, 0, -262155, 15, 0, -262154, 15, 0, -262153, 15, 0, -262152, 15, 0, -262151, 11, 0, -262150, 15, 0, -262149, 15, 0, -262148, 15, 0, -262147, 11, 0, -262146, 15, 0, -262145, 15, 0, -327680, 15, 0, -327679, 15, 0, -327678, 11, 0, -327677, 15, 0, -327676, 15, 0, -327675, 15, 0, -327674, 11, 0, -327673, 15, 0, -327672, 15, 0, -327671, 15, 0, -327670, 15, 0, -327669, 15, 0, -327668, 15, 0, -196621, 15, 0, -196620, 15, 0, -196617, 15, 0, -196616, 15, 0, -196615, 11, 0, -196614, 15, 0, -196613, 15, 0, -196612, 15, 0, -196611, 11, 0, -196610, 15, 0, -196609, 15, 0, -262144, 15, 0, -262143, 15, 0, -262142, 11, 0, -262141, 15, 0, -262140, 15, 0, -262139, 15, 0, -262138, 11, 0, -262137, 15, 0, -262136, 15, 0, -262133, 15, 0, -262132, 15, 0, -131085, 15, 0, -131084, 15, 0, -131081, 15, 0, -131080, 15, 0, -131079, 11, 0, -131078, 15, 0, -131077, 15, 0, -131076, 15, 0, -131075, 11, 0, -131074, 15, 0, -131073, 15, 0, -196608, 15, 0, -196607, 15, 0, -196606, 11, 0, -196605, 15, 0, -196604, 15, 0, -196603, 15, 0, -196602, 11, 0, -196601, 15, 0, -196600, 15, 0, -196599, 5, 0, -196598, 5, 0, -196597, 15, 0, -196596, 15, 0, -65549, 15, 0, -65548, 15, 0, -65545, 15, 0, -65544, 15, 0, -65543, 11, 0, -65542, 15, 0, -65541, 15, 0, -65540, 15, 0, -65539, 11, 0, -65538, 15, 0, -65537, 15, 0, -131072, 15, 0, -131071, 15, 0, -131070, 11, 0, -131069, 15, 0, -131068, 15, 0, -131067, 15, 0, -131066, 11, 0, -131065, 15, 0, -131064, 15, 0, -131063, 5, 0, -131062, 5, 0, -131061, 15, 0, -131060, 15, 0, -13, 15, 0, -12, 536870922, 0, -11, 12, 0, -10, 12, 0, -9, 10, 0, -8, 15, 0, -7, 11, 0, -6, 15, 0, -5, 15, 0, -4, 15, 0, -3, 11, 0, -2, 15, 0, -1, 15, 0, -65536, 15, 0, -65535, 15, 0, -65534, 11, 0, -65533, 15, 0, -65532, 15, 0, -65531, 15, 0, -65530, 11, 0, -65529, 15, 0, -65528, 536870922, 0, -65527, 12, 0, -65526, 12, 0, -65525, 10, 0, -65524, 15, 0, 65523, 15, 0, 65524, 15, 0, 65525, 15, 0, 65526, 15, 0, 65527, 15, 0, 65528, 15, 0, 65529, 11, 0, 65530, 15, 0, 65531, 15, 0, 65532, 15, 0, 65533, 11, 0, 65534, 15, 0, 65535, 15, 0, 0, 15, 0, 1, 15, 0, 2, 11, 0, 3, 15, 0, 4, 15, 0, 5, 15, 0, 6, 11, 0, 7, 15, 0, 8, 15, 0, 9, 15, 0, 10, 15, 0, 11, 15, 0, 12, 15, 0, 131059, 15, 0, 131060, 15, 0, 131061, 15, 0, 131062, 15, 0, 131063, 15, 0, 131064, 15, 0, 131065, 11, 0, 131066, 15, 0, 131067, 15, 0, 131068, 15, 0, 131069, 11, 0, 131070, 15, 0, 131071, 15, 0, 65536, 15, 0, 65537, 15, 0, 65538, 11, 0, 65539, 15, 0, 65540, 15, 0, 65541, 15, 0, 65542, 11, 0, 65543, 15, 0, 65544, 15, 0, 65545, 15, 0, 65546, 15, 0, 65547, 15, 0, 65548, 15, 0, 196595, 15, 0, 196596, 15, 0, 196597, 15, 0, 196598, 15, 0, 196599, 15, 0, 196600, 15, 0, 196601, 15, 0, 196602, 15, 0, 196603, 15, 0, 196604, 15, 0, 196605, 15, 0, 196606, 15, 0, 196607, 15, 0, 131072, 15, 0, 131073, 15, 0, 131074, 15, 0, 131075, 15, 0, 131076, 15, 0, 131077, 15, 0, 131078, 15, 0, 131079, 15, 0, 131080, 15, 0, 131081, 15, 0, 131082, 15, 0, 131083, 15, 0, 131084, 15, 0, 262131, 15, 0, 262132, 15, 0, 262133, 15, 0, 262134, 15, 0, 262135, 15, 0, 262136, 15, 0, 262137, 15, 0, 262138, 15, 0, 262139, 15, 0, 262140, 15, 0, 262141, 15, 0, 262142, 15, 0, 262143, 15, 0, 196608, 15, 0, 196609, 15, 0, 196610, 15, 0, 196611, 15, 0, 196612, 15, 0, 196613, 15, 0, 196614, 15, 0, 196615, 15, 0, 196616, 15, 0, 196617, 15, 0, 196618, 15, 0, 196619, 15, 0, 196620, 15, 0, 327667, 15, 0, 327668, 15, 0, 327669, 15, 0, 327670, 15, 0, 327671, 15, 0, 327672, 15, 0, 327673, 15, 0, 327674, 15, 0, 327675, 15, 0, 327676, 15, 0, 327677, 15, 0, 327678, 15, 0, 327679, 15, 0, 262144, 15, 0, 262145, 15, 0, 262146, 15, 0, 262147, 15, 0, 262148, 15, 0, 262149, 15, 0, 262150, 15, 0, 262151, 15, 0, 262152, 15, 0, 262153, 15, 0, 262154, 15, 0, 262155, 15, 0, 262156, 15, 0, 393203, 15, 0, 393204, 15, 0, 393205, 15, 0, 393206, 15, 0, 393207, 536870922, 0, 393208, 12, 0, 393209, 12, 0, 393210, 12, 0, 393211, 12, 0, 393212, 12, 0, 393213, 12, 0, 393214, 12, 0, 393215, 12, 0, 327680, 12, 0, 327681, 12, 0, 327682, 12, 0, 327683, 12, 0, 327684, 12, 0, 327685, 12, 0, 327686, 12, 0, 327687, 12, 0, 327688, 10, 0, 327689, 15, 0, 327690, 15, 0, 327691, 15, 0, 327692, 15, 0, 458739, 15, 0, 458740, 15, 0, 458741, 15, 0, 458742, 15, 0, 458743, 15, 0, 458744, 15, 0, 458745, 15, 0, 458746, 15, 0, 458747, 15, 0, 458748, 15, 0, 458749, 15, 0, 458750, 15, 0, 458751, 15, 0, 393216, 15, 0, 393217, 15, 0, 393218, 15, 0, 393219, 15, 0, 393220, 15, 0, 393221, 15, 0, 393222, 15, 0, 393223, 15, 0, 393224, 15, 0, 393225, 15, 0, 393226, 15, 0, 393227, 15, 0, 393228, 15, 0, 524275, 15, 0, 524276, 15, 0, 524277, 15, 0, 524278, 15, 0, 524279, 15, 0, 524280, 15, 0, 524281, 15, 0, 524282, 15, 0, 524283, 15, 0, 524284, 15, 0, 524285, 15, 0, 524286, 15, 0, 524287, 15, 0, 458752, 15, 0, 458753, 15, 0, 458754, 15, 0, 458755, 15, 0, 458756, 15, 0, 458757, 15, 0, 458758, 15, 0, 458759, 15, 0, 458760, 15, 0, 458761, 15, 0, 458762, 15, 0, 458763, 15, 0, 458764, 15, 0, 589811, 15, 0, 589812, 15, 0, 589813, 15, 0, 589814, 15, 0, 589815, 15, 0, 589816, 15, 0, 589817, 15, 0, 589818, 15, 0, 589819, 15, 0, 589820, 15, 0, 589821, 15, 0, 589822, 15, 0, 589823, 15, 0, 524288, 15, 0, 524289, 15, 0, 524290, 15, 0, 524291, 15, 0, 524292, 15, 0, 524293, 15, 0, 524294, 15, 0, 524295, 15, 0, 524296, 15, 0, 524297, 15, 0, 524298, 15, 0, 524299, 15, 0, 524300, 15, 0 )

[node name="RangePreview" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = -5
script = ExtResource( 8 )

[node name="GameObjects" type="YSort" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UpgradePanel" parent="UILayer/GUI" instance=ExtResource( 4 )]
unique_name_in_owner = true

[node name="PlayerInfoUI" parent="UILayer/GUI" instance=ExtResource( 1 )]
margin_right = 70.0
margin_bottom = 48.0

[node name="VBox" type="VBoxContainer" parent="UILayer/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
mouse_filter = 2
custom_constants/separation = 10

[node name="Consumables" parent="UILayer/GUI/VBox" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 315.0
margin_bottom = 115.0
size_flags_vertical = 3
spawn_cards = false

[node name="Spacing" type="Control" parent="UILayer/GUI/VBox"]
margin_top = 125.0
margin_right = 315.0
margin_bottom = 240.0
mouse_filter = 2
size_flags_vertical = 3

[node name="PauseMenu" parent="UILayer/GUI" instance=ExtResource( 7 )]
visible = false

[node name="HintDim" type="PanelContainer" parent="UILayer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_styles/panel = SubResource( 5 )

[node name="HintBuy" type="VBoxContainer" parent="UILayer/HintDim"]
visible = false
margin_right = 320.0
margin_bottom = 240.0

[node name="MarginContainer" type="MarginContainer" parent="UILayer/HintDim/HintBuy"]
margin_right = 320.0
margin_bottom = 118.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="UILayer/HintDim/HintBuy/MarginContainer"]
margin_left = 10.0
margin_top = 77.0
margin_right = 310.0
margin_bottom = 108.0
mouse_filter = 1
size_flags_vertical = 10
theme = ExtResource( 10 )
text = "Use the buy menu
to unlock towers"
align = 2

[node name="Control" type="Control" parent="UILayer/HintDim/HintBuy"]
margin_top = 122.0
margin_right = 320.0
margin_bottom = 240.0
mouse_filter = 1
size_flags_vertical = 3

[node name="HintPreview" type="VBoxContainer" parent="UILayer/HintDim"]
visible = false
margin_right = 320.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="UILayer/HintDim/HintPreview"]
margin_top = 104.0
margin_right = 320.0
margin_bottom = 118.0
size_flags_vertical = 10
theme = ExtResource( 10 )
align = 1
valign = 2

[node name="Control" type="Control" parent="UILayer/HintDim/HintPreview"]
margin_top = 122.0
margin_right = 320.0
margin_bottom = 240.0
mouse_filter = 1
size_flags_vertical = 3

[node name="HintAbility" type="VBoxContainer" parent="UILayer/HintDim"]
visible = false
margin_right = 320.0
margin_bottom = 240.0

[node name="MarginContainer" type="MarginContainer" parent="UILayer/HintDim/HintAbility"]
margin_right = 320.0
margin_bottom = 118.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 45
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="UILayer/HintDim/HintAbility/MarginContainer"]
margin_top = 99.0
margin_right = 275.0
margin_bottom = 113.0
size_flags_vertical = 10
theme = ExtResource( 10 )
text = "Click to use item"
align = 2

[node name="Control" type="Control" parent="UILayer/HintDim/HintAbility"]
margin_top = 122.0
margin_right = 320.0
margin_bottom = 240.0
mouse_filter = 1
size_flags_vertical = 3

[node name="HintSell" type="VBoxContainer" parent="UILayer/HintDim"]
visible = false
margin_right = 320.0
margin_bottom = 240.0

[node name="MarginContainer" type="MarginContainer" parent="UILayer/HintDim/HintSell"]
margin_right = 320.0
margin_bottom = 118.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="UILayer/HintDim/HintSell/MarginContainer"]
margin_left = 10.0
margin_top = 77.0
margin_right = 310.0
margin_bottom = 108.0
size_flags_vertical = 8
theme = ExtResource( 10 )
text = "Use the sell menu
to get extra cash"
align = 2

[node name="Control" type="Control" parent="UILayer/HintDim/HintSell"]
margin_top = 122.0
margin_right = 320.0
margin_bottom = 240.0
mouse_filter = 1
size_flags_vertical = 3

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="DummyTimer" type="Timer" parent="."]
wait_time = 2.4
autostart = true

[connection signal="timeout" from="DummyTimer" to="." method="_on_dummy_timeout"]
